--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,20 +1,15 @@
-# Copyright (c) 2020 Ryan Cross
-# SPDX-License-Identifier: MIT
+# Mantém o teclado em modo split
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_TRANSPORT_BT_USB=y  # Permite tanto USB/TRRS quanto Bluetooth
 
-# Uncomment the following line to enable the Sofle OLED Display
-CONFIG_ZMK_DISPLAY=y
+# Configuração do Bluetooth
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_BLE_PERIPHERAL=y
+CONFIG_ZMK_BLE_CENTRAL=y
 
-# Uncomment these two lines to add support for encoders
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+# Alternância automática entre TRRS e Bluetooth
+CONFIG_ZMK_SPLIT_AUTO_DETECT=y
 
-# Uncomment this line below to add rgb underglow / backlight support
-CONFIG_ZMK_RGB_UNDERGLOW=y
-
-# Uncomment the line below to disable external power toggling by the underglow.
-# By default toggling the underglow on and off also toggles external power
-# on and off. This also causes the display to turn off.
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
-
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+# Desativa Bluetooth automaticamente quando USB está conectado
+CONFIG_ZMK_BLE_AUTO_DISABLE=y
