--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,15 +1,11 @@
-# Mantém o teclado em modo split
-CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
-CONFIG_ZMK_SPLIT_TRANSPORT_BT_USB=y  # Permite tanto USB/TRRS quanto Bluetooth
-
-# Configuração do Bluetooth
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_ZMK_BLE=y
-CONFIG_ZMK_BLE_PERIPHERAL=y
-CONFIG_ZMK_BLE_CENTRAL=y
-
-# Alternância automática entre TRRS e Bluetooth
-CONFIG_ZMK_SPLIT_AUTO_DETECT=y
-
-# Desativa Bluetooth automaticamente quando USB está conectado
-CONFIG_ZMK_BLE_AUTO_DISABLE=y
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_TRANSPORT_BT_USB=y
+CONFIG_ZMK_SPLIT=y
