--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -6,6 +6,6 @@ CONFIG_ZMK_BLE=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
-CONFIG_ZMK_SPLIT_TRANSPORT_BT_USB=y
 CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_BLE=y  # Ativa BLE em modo split corretamente
