--- a/build.yaml
+++ b/build.yaml
@@ -24,4 +24,5 @@ include:
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y -DCONFIG_ZMK_SPLIT_BLE=n
   - board: nice_nano_v2
     shield: sofle_right
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_PERIPHERAL=y
+    cmake-args: -DCONFIG_ZMK_SPLIT=y
+
