--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -19,3 +19,7 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 CONFIG_ZMK_SPLIT=y
+
+CONFIG_USB=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_ZMK_USB=y
