--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -23,3 +23,6 @@ CONFIG_ZMK_SPLIT=y
 CONFIG_USB=y
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_ZMK_USB=y
+
+CONFIG_ZMK_BLE_AUTO_CONNECT=n
+CONFIG_ZMK_BLE_PROFILE_BOOT_NONE=y
