--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -3,8 +3,8 @@
 # Uncomment the following line to enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
-CONFIG_ZMK_SLEEP=y 
-CONFIG_ZMK_IDLE_TIMEOUT=60000
+# CONFIG_ZMK_SLEEP=y 
+# CONFIG_ZMK_IDLE_TIMEOUT=60000
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
